# Mark2

./: README.md  marcos.cpp
Controle/: Projeto Jaca.ttt  QQuad_qASGD_ExpInt.ttt  marcos.cpp  marcos.h
DAQ/: Cholesky-decomposition.cpp  Código base de leitura dos sensores - 2020.1  Kalman.c  Matrizes.c  inverse.c  libdac.h  (+4 more)
Visao/Fira/: CMakeLists.txt  README.md  package.xml
Visao/Fira/launch/: Spawn_obstacles.launch  Spawn_ruas_e_pousos.launch  Spawn_ruas_sem_qr.launch  Spawn_torres.launch
Visao/Fira/models/Obstaculo_Vermelho/: model.sdf
Visao/Fira/models/cruz_vermelha/: model.sdf
Visao/Fira/models/cruz_vermelha/materials/scripts/: ardrone_sim.material
Visao/Fira/models/heliponto/: model.sdf
Visao/Fira/models/heliponto/materials/scripts/: ardrone_sim.material
Visao/Fira/models/predio/: model.config  model.sdf
Visao/Fira/models/qr1/: model.sdf
Visao/Fira/models/qr1/materials/scripts/: ardrone_sim.material
Visao/Fira/models/qr10/materials/scripts/: ardrone_sim.material
Visao/Fira/models/qr12/: model.sdf
Visao/Fira/models/qr2/: model.config
Visao/Fira/models/qr3/materials/scripts/: ardrone_sim.material
Visao/Fira/models/qr4/materials/scripts/: ardrone_sim.material
Visao/Fira/models/qr5/materials/scripts/: ardrone_sim.material
Visao/Fira/models/qr7/materials/scripts/: ardrone_sim.material
Visao/Fira/models/qr8/: model.config  model.sdf
Visao/Fira/models/qr8/materials/scripts/: ardrone_sim.material  ardrone_sim.material~
Visao/Fira/models/qr9/: model.config
Visao/Fira/models/qr_torre/: model.config
Visao/Fira/models/qr_torre/materials/scripts/: ardrone_sim.material
Visao/Fira/models/rua/: model.sdf
Visao/Fira/models/rua_conect/materials/scripts/: ardrone_sim.material
Visao/Fira/models/rua_sem_qr_code/: model.config
Visao/Fira/worlds/: fira.world  simple_world.world
Visao/Opencv-ROS/Códigos para a Simulação/cores+simbolos/: CMakeLists.txt  cores+simbolos_simulação.cpp  package.xml
Visao/Opencv-ROS/Códigos para a Simulação/cores+simbolos/src/: cores+simbolos_simulação.cpp
Visao/controle/: CMakeLists.txt  package.xml
Visao/controle/src/: controle.cpp
(+86 files in other folders)
